--- a/presentation/7.networkig.md
+++ b/presentation/7.networkig.md
@@ -13,3 +13,11 @@ Service discovery
 Network isolation
 Port publishing vs exposing
 Name resolution in multi-container environments
+
+## Networking Inside Containers
+
+Network namespaces
+veth pairs
+Linux bridges & NAT (iptables)
+DNS resolution (embedded DNS)
+Routing basics inside containers
