chore: complete dockerfile

--- a/presentation/4.dockerfile.md
+++ b/presentation/4.dockerfile.md
@@ -1,28 +1,258 @@
 # Dockerfile
 
-4.1 Building Production-Ready Dockerfiles
-Slim base images
-Non-root users
-Multi-stage builds
-Pinning versions
-Reproducible builds
-Reducing attack surface
+## Building Production-Ready Dockerfiles
 
-4.2 Dockerfile Best Practices
-COPY vs ADD
-Layer ordering for caching
-Structuring RUN commands
-Using .dockerignore
-Environment variables and ARGs
+### Slim base images
 
-4.3 Multi-Stage Builds
-Builder stage vs runtime stage
-Reducing image size
-Keeping artifacts clean
+Using smaller base images reduces:
 
-4.4 Docker BuildKit Deep Dive
-Parallel builds
-Secrets & SSH mounts
-Inline cache
-Build attestation
-BuildKit features vs classic builder
+- Attack surface
+- Build time
+- Network transfer size
+
+A slim image is a version of a base image that:
+
+- Contains only the minimal OS packages needed to run the language/runtime
+- Removes documentation, locales, compilers, man pages
+- Does NOT include build tools (gcc, make, git, curl, etc.)
+- Results in a much smaller image size
+
+```txt
+| Image                | Size                                             |
+| -------------------- | ------------------------------------------------ |
+| `python:3.12`        | ~940 MB                                          |
+| `python:3.12-slim`   | ~80–90 MB                                        |
+| `python:3.12-alpine` | ~10–15 MB *(but musl-based, can break binaries)* |
+```
+
+```dockerfile
+# bad
+FROM ubuntu:22.04
+RUN apt-get update && apt-get install -y python3
+
+# good
+FROM python:3.12-slim
+
+# even better
+FROM gcr.io/distroless/python3
+```
+
+Why “slim”?
+
+- Fewer packages → fewer vulnerabilities
+- Faster image pulls
+- Smaller cache footprint
+
+Why not always Alpine?
+
+- Alpine uses musl libc, not glibc
+- Some Python, Java, Go, C binaries behave differently
+
+### Non-root users
+
+Running as root increases risk:
+
+- Container escape attacks
+- Privilege escalation
+- Volume write abuse
+
+```dockerfile
+FROM python:3.12-slim
+RUN useradd -m app
+USER app
+```
+
+### Multi-stage builds
+
+```dockerfile
+FROM golang:1.25.4
+WORKDIR /app
+COPY . .
+RUN go build -o app
+CMD ["./app"]
+```
+
+```dockerfile
+# Stage 1: Build
+FROM golang:1.25.4 AS builder
+WORKDIR /app
+COPY . .
+RUN go build -o app
+
+# Stage 2: Runtime
+FROM alpine:3.19
+WORKDIR /app
+COPY --from=builder /app/app .
+CMD ["./app"]
+```
+
+### Pinning versions
+
+- Reproducible builds
+- Predictable deployment
+- Stable releases
+
+```dockerfile
+# bad
+RUN apt-get install -y nginx
+
+# good
+RUN apt-get update && apt-get install -y nginx=1.18.0-6ubuntu14.4
+```
+
+### Reducing attack surface
+
+remove everything your app does not need
+
+- Remove package manager caches
+- Use distroless images (no shell, no package manager)
+- Reduce Linux capabilities
+- Disable root login
+- Read-only filesystem
+- Remove build tools in production (golang, curl, gcc, git)
+- Don't copy the entire repo if unnecessary
+
+### Full Example
+
+```txt
+# requirements.txt
+flask==3.0.2
+```
+
+```dockerfile
+# Stage 1: Build
+FROM python:3.12-slim as builder
+WORKDIR /app
+
+# Install build dependencies
+RUN apt-get update && apt-get install -y build-essential && \
+    rm -rf /var/lib/apt/lists/*
+
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY . .
+
+# Stage 2: Run
+FROM gcr.io/distroless/python3-debian12
+WORKDIR /app
+
+COPY --from=builder /app .
+
+# Drop privileges
+USER nonroot
+
+ENTRYPOINT ["app.py"]
+```
+
+## Dockerfile Best Practices
+
+### Environment variables and ARGs
+
+ARG -> build time -> Common for versions, build flags
+ENV -> Available at runtime -> Used by your application
+
+### Layer ordering for caching
+
+- cache breaks too early
+
+```dockerfile
+COPY . .
+RUN npm install
+```
+
+- Only the last COPY breaks cache
+
+```dockerfile
+COPY package*.json ./
+RUN npm install --production
+COPY . .
+```
+
+### Structuring RUN commands
+
+- Creates too many layers
+
+```dockerfile
+RUN apt-get update
+RUN apt-get install -y curl
+RUN apt-get install -y git
+RUN apt-get clean
+```
+
+- Smaller image
+- Faster build
+- Fewer layers → better caching
+
+```dockerfile
+RUN apt-get update && \
+    apt-get install -y curl git && \
+    rm -rf /var/lib/apt/lists/*
+```
+
+### Using .dockerignore
+
+reduces build context size
+
+Without .dockerignore, `COPY . .` will break caching even if you change only README.md
+
+```.dockerignore
+.git
+node_modules
+.env
+*.log
+__pycache__
+build/
+dist/
+docker-compose.yml
+README.md
+```
+
+### Dockerfile commands & Best practices
+
+```dockerfile
+# Build stage
+FROM node:20.11-slim AS builder
+
+WORKDIR /app
+
+# 1. Only copy files that impact installs
+COPY package*.json ./
+
+# 2. Install dependencies
+RUN npm install --production
+
+# 3. Copy rest of files
+COPY . .
+
+# Runtime stage
+FROM node:20.11-slim
+
+WORKDIR /app
+
+# 4. Non-root user
+RUN useradd -m app
+USER app
+
+# 5. Copy app from builder
+COPY --from=builder /app .
+
+# 6. Environmental variables
+ENV NODE_ENV=production
+ENV PORT=8080
+
+EXPOSE 8080
+
+# 7. Entrypoint
+ENTRYPOINT ["node", "index.js"]
+```
+
+## Docker BuildKit vs Classic Builder
+
+Docker originally used a classic (legacy) builder, which was simple but slow and limited.
+BuildKit is the next-generation build engine introduced to solve these limitations.
+
+Think of it like this:
+
+- Classic Builder = old single-threaded compiler
+- BuildKit = modern parallel, cached, secure build system
