chore: add registry

--- a/presentation/5.registry.md
+++ b/presentation/5.registry.md
@@ -1,14 +1,19 @@
 # Registry
 
-5.1 Registries: Public vs Private
-Docker Hub
-GitHub Container Registry (GHCR)
-AWS ECR
-Harbor (enterprise registry)
+## Public vs Private
 
-5.2 Registry Features
-Access control
-Tagging & versioning strategies
-Vulnerability scanning
-Signing and provenance (cosign, Notary)
-Rate limits & reliability concerns
+A container registry is simply a hosted storage system for container images.
+Think of it like GitHub but for Docker images.
+
+You push images to it, others pull from it.
+
+Registries can be:
+
+- Public → anyone can pull your image (e.g., nginx:latest)
+- Private → requires authentication (companies, internal systems)
+
+- Docker Hub
+- GitHub Container Registry (GHCR)
+- AWS ECR
+
+Most widely used self-hosted registry is Harbor
