chore: complete compose

--- a/presentation/6.compose.md
+++ b/presentation/6.compose.md
@@ -1,13 +1,49 @@
 # Compose
 
-6.1 Compose for Development
-Multi-service local stacks
-Hot reload (bind mounts)
-Service overrides with override.yml
-Profiles for enabling/disabling services
-Environment variables & secrets
+Docker Compose is the developer’s orchestration tool for running multi-container applications locally.
 
-6.2 Compose Best Practices
-Splitting dev/test/prod configurations
-Using healthchecks
-Ensuring reproducible environments
+It lets you define services, networks, volumes, and configs in a single declarative YAML file.
+
+## Compose File Structure (compose.yml)
+
+Key top-level objects:
+
+- services
+- volumes
+- networks
+- configs
+- secrets
+
+```yaml
+services:
+  api:
+    build: .
+    depends_on:
+      - db
+      - redis
+    ports:
+      - "8080:8080"
+    environments:
+        PASSWORD: ${STRONG_PASSWORD} # read from .env file
+
+  db:
+    image: postgres:16
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    secrets:
+      - db_pass
+
+  redis:
+    image: redis:alpine
+
+volumes:
+  pgdata:
+
+secrets:
+  db_pass:
+    file: ./secrets/db_pass.txt
+```
+
+```sh
+docker compose up -d
+```
