chore: complete storage

--- a/presentation/7.storage.md
+++ b/presentation/7.storage.md
@@ -1,19 +1,82 @@
 # Storage
 
-Types of volumes:
-Named volumes → persistent
-Bind mounts → editable source code
+## Persistent Storage & Volumes
 
-7.1 Persistent Storage & Volumes
-Named volumes
-Bind mounts
-tmpfs mounts
+Containers are ephemeral — if a container is removed, its filesystem disappears.
 
-7.2 Volume Drivers & Performance
-Local driver
-NFS, CIFS, cloud drivers
-Performance considerations
+Docker provides three storage mechanisms that let you persist or mount data:
 
-7.3 Data Strategy in Containers
-Stateless vs stateful services
-Backup & restore patterns
+1. Named volumes
+
+Named volumes are managed by Docker.
+
+They live inside Docker’s internal storage directory like `/var/lib/docker/volumes/<volume>/_data`
+
+Best for:
+
+- Databases (Postgres, MySQL, MongoDB)
+- Caches (Redis persistent mode)
+- Anything where you want portable but isolated state
+
+2. Bind mounts
+
+Bind mounts map a host directory directly into the container.
+
+Think of it as: “Use THIS folder from my laptop inside the container, live.”
+
+Best for:
+
+- Application source code (hot reloading)
+- Config files / local development assets
+- Volume debugging
+
+3. tmpfs mounts
+
+A tmpfs mount stores data in RAM, not on disk.
+
+Best for:
+
+- Temporary runtime data
+- Sensitive data (disappears on restart)
+- High-performance caching
+- Avoiding writes to disk (SSD wear reduction)
+
+## Volume Drivers & Performance
+
+Docker volumes can be backed by different drivers.
+
+The choice of driver affects:
+
+- Performance
+- Reliability
+- Compatibility
+
+### Local Driver (default, fastest)
+
+The local driver stores volume data directly on the host filesystem.
+
+```yaml
+services:
+  db:
+    image: postgres
+    volumes:
+      - dbdata:/var/lib/postgresql/data
+
+volumes:
+  dbdata:
+    driver: local
+```
+
+### NFS (Network File System) Driver
+
+NFS allows storing volumes on a remote server, not local disk.
+
+```yaml
+volumes:
+  shared-data:
+    driver: local
+    driver_opts:
+      type: nfs
+      o: addr=10.0.0.5,rw
+      device: ":/exports/data"
+```
